prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: demo-nginx
  name: demo-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: demo-nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: demo-nginx
    spec:
      containers:
      - image: 637423550581.dkr.ecr.us-west-2.amazonaws.com/eks-demo-repo:96
        name: nginx
        ports:
        - containerPort: 80
