prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-nginx
  name: demo-nginx-svc
spec:
#  type: LoadBalancer
  type: NodePort
  ports:
#  - port: 80
  - port: 9090
    protocol: TCP
    targetPort: 80
  selector:
    app: demo-nginx
