prod/ingress-alb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-alb
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0da53a396e002a40f,subnet-0122dfa4163d0fcee,subnet-098ae16ba716f1bb3
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
  - http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-nginx-svc
            port:
              number: 80
